unpackaged/main/default/objects/Contact/fields/Demo_1__c.field-meta.xml
<CustomField>
    <fullName>Demo_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-1</label>
    <type>Checkbox</type>
</CustomField>