unpackaged/main/default/objects/Contact/fields/Demo_2__c.field-meta.xml
<CustomField>
    <fullName>Demo_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-2</label>
    <type>Checkbox</type>
</CustomField>