unpackaged/main/default/objects/Contact/fields/mandeep_1__c.field-meta.xml
<CustomField>
    <fullName>mandeep_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-1</label>
    <type>Checkbox</type>
</CustomField>