unpackaged/main/default/objects/Contact/fields/mandeep_2__c.field-meta.xml
<CustomField>
    <fullName>mandeep_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-2</label>
    <type>Checkbox</type>
</CustomField>