unpackaged/main/default/objects/Contact/fields/mandeep_4__c.field-meta.xml
<CustomField>
    <fullName>mandeep_4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mandeep-4</label>
    <type>Checkbox</type>
</CustomField>